// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SyncControls snapshots allButtonsDisabled 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: flex-start;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c4 svg {
  height: 24px;
  width: 24px;
}

.c4 svg path.path-fill,
.c4 svg line.path-fill,
.c4 svg polygon.path-fill,
.c4 svg rect.path-fill,
.c4 svg circle.path-fill,
.c4 svg polyline.path-fill {
  fill: !important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg path.stroke-fill,
.c4 svg line.stroke-fill,
.c4 svg polygon.stroke-fill,
.c4 svg rect.stroke-fill,
.c4 svg circle.stroke-fill,
.c4 svg polyline.stroke-fill {
  stroke: !important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c4.downward {
  transform: rotate(180deg);
}

.c4.upward {
  transform: initial;
}

.c4 img {
  width: 24px;
}

.c8 svg {
  fill: #009CCC;
  height: 24px;
  width: 24px;
}

.c8 svg path.path-fill,
.c8 svg line.path-fill,
.c8 svg polygon.path-fill,
.c8 svg rect.path-fill,
.c8 svg circle.path-fill,
.c8 svg polyline.path-fill {
  fill: #009CCC!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c8 svg path.stroke-fill,
.c8 svg line.stroke-fill,
.c8 svg polygon.stroke-fill,
.c8 svg rect.stroke-fill,
.c8 svg circle.stroke-fill,
.c8 svg polyline.stroke-fill {
  stroke: #009CCC!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c8 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c8.downward {
  transform: rotate(180deg);
}

.c8.upward {
  transform: initial;
}

.c8 img {
  width: 24px;
}

.c5 {
  padding: 4px;
}

.c2.MuiButton-root {
  height: 32px;
  font-size: 12px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c2.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c2.MuiButton-outlined {
  padding: 8px 12px;
}

.c6.MuiFormControlLabel-root {
  margin-right: 0;
  margin-left: 0;
}

.c6 .MuiFormControlLabel-label {
  color: #1a1a1a;
}

.c6 .MuiFormControlLabel-label.Mui-disabled {
  color: #BDBDBD;
}

.c6 .MuiTypography-root {
  margin-left: 8px;
}

.c7.MuiButton-root {
  border-radius: 50%;
  min-width: 32px;
  height: 32px;
  padding: 0;
}

.c7.MuiButton-root.Mui-disabled svg {
  fill: #BDBDBD;
}

.c7.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c7.MuiButton-text {
  padding: 0;
}

.c7.MuiButton-text.Mui-disabled {
  color: #BDBDBD;
}

.c7.MuiButton-text.Mui-disabled svg {
  fill: #BDBDBD;
}

.c1 .sync-icon-button {
  text-transform: uppercase;
  pointer-events: none;
}

.c1 .rotate-icon {
  color: #009CCC;
  animation: 1s linear infinite dxlcOg;
}

<div
    class="c0 c1"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation c2 sync-icon-button css-9buukw-MuiButtonBase-root-MuiButton-root"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1v1j2p3-MuiButton-startIcon"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="SyncIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4z"
            />
          </svg>
        </div>
      </span>
      Sync
    </button>
    <div
      class="c5"
    />
    <div
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
    >
      <div
        aria-labelledby="source-radio-buttons-group-label"
        class="MuiFormGroup-root MuiFormGroup-row MuiRadioGroup-root MuiRadioGroup-row css-cis11t-MuiFormGroup-root"
        data-testid="sync-options"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd c6 css-12f4qvw-MuiFormControlLabel-root"
        >
          <span
            aria-disabled="true"
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked Mui-disabled MuiRadio-root MuiRadio-colorPrimary css-vzt8pi-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
            tabindex="-1"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              disabled=""
              name="source-radio-buttons-group"
              type="radio"
              value="WithSource"
            />
            <span
              class="css-9oxshb-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pqw2bl-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1lw54ax-MuiTypography-root"
          >
            with Source
          </span>
        </label>
        <div
          class="c5"
        />
        <label
          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd c6 css-12f4qvw-MuiFormControlLabel-root"
        >
          <span
            aria-disabled="true"
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-disabled MuiRadio-root MuiRadio-colorPrimary css-vzt8pi-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
            tabindex="-1"
          >
            <input
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              disabled=""
              name="source-radio-buttons-group"
              type="radio"
              value="WithoutSource"
            />
            <span
              class="css-9oxshb-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-cpa8b4-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1lw54ax-MuiTypography-root"
          >
            without Source
          </span>
        </label>
      </div>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Sync"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="sync-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Suspend"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="suspend-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PauseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19h4V5H6zm8-14v14h4V5z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Resume"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="resume-button"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <div
          class="c3 c8"
        >
          <svg
            height="24"
            viewBox="-2 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.08331 18.75V4.75H6.41665V18.75H4.08331ZM8.74998 18.75L20.4166 11.75L8.74998 4.75V18.75Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SyncControls snapshots hasTooltipSuffix 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: flex-start;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c4 svg {
  height: 24px;
  width: 24px;
}

.c4 svg path.path-fill,
.c4 svg line.path-fill,
.c4 svg polygon.path-fill,
.c4 svg rect.path-fill,
.c4 svg circle.path-fill,
.c4 svg polyline.path-fill {
  fill: !important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg path.stroke-fill,
.c4 svg line.stroke-fill,
.c4 svg polygon.stroke-fill,
.c4 svg rect.stroke-fill,
.c4 svg circle.stroke-fill,
.c4 svg polyline.stroke-fill {
  stroke: !important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c4.downward {
  transform: rotate(180deg);
}

.c4.upward {
  transform: initial;
}

.c4 img {
  width: 24px;
}

.c8 svg {
  fill: #009CCC;
  height: 24px;
  width: 24px;
}

.c8 svg path.path-fill,
.c8 svg line.path-fill,
.c8 svg polygon.path-fill,
.c8 svg rect.path-fill,
.c8 svg circle.path-fill,
.c8 svg polyline.path-fill {
  fill: #009CCC!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c8 svg path.stroke-fill,
.c8 svg line.stroke-fill,
.c8 svg polygon.stroke-fill,
.c8 svg rect.stroke-fill,
.c8 svg circle.stroke-fill,
.c8 svg polyline.stroke-fill {
  stroke: #009CCC!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c8 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c8.downward {
  transform: rotate(180deg);
}

.c8.upward {
  transform: initial;
}

.c8 img {
  width: 24px;
}

.c5 {
  padding: 4px;
}

.c2.MuiButton-root {
  height: 32px;
  font-size: 12px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c2.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c2.MuiButton-outlined {
  padding: 8px 12px;
}

.c6.MuiFormControlLabel-root {
  margin-right: 0;
  margin-left: 0;
}

.c6 .MuiFormControlLabel-label {
  color: #1a1a1a;
}

.c6 .MuiFormControlLabel-label.Mui-disabled {
  color: #BDBDBD;
}

.c6 .MuiTypography-root {
  margin-left: 8px;
}

.c7.MuiButton-root {
  border-radius: 50%;
  min-width: 32px;
  height: 32px;
  padding: 0;
}

.c7.MuiButton-root.Mui-disabled svg {
  fill: #BDBDBD;
}

.c7.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c7.MuiButton-text {
  padding: 0;
}

.c7.MuiButton-text.Mui-disabled {
  color: #BDBDBD;
}

.c7.MuiButton-text.Mui-disabled svg {
  fill: #BDBDBD;
}

.c1 .sync-icon-button {
  text-transform: uppercase;
  pointer-events: none;
}

.c1 .rotate-icon {
  color: #009CCC;
  animation: 1s linear infinite dxlcOg;
}

<div
    class="c0 c1"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation c2 sync-icon-button css-9buukw-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1v1j2p3-MuiButton-startIcon"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="SyncIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4z"
            />
          </svg>
        </div>
      </span>
      Sync
    </button>
    <div
      class="c5"
    />
    <div
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
    >
      <div
        aria-labelledby="source-radio-buttons-group-label"
        class="MuiFormGroup-root MuiFormGroup-row MuiRadioGroup-root MuiRadioGroup-row css-cis11t-MuiFormGroup-root"
        data-testid="sync-options"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd c6 css-12f4qvw-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-1jxqxch-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              name="source-radio-buttons-group"
              type="radio"
              value="WithSource"
            />
            <span
              class="css-9oxshb-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pqw2bl-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1lw54ax-MuiTypography-root"
          >
            with Source
          </span>
        </label>
        <div
          class="c5"
        />
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd c6 css-12f4qvw-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1jxqxch-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              name="source-radio-buttons-group"
              type="radio"
              value="WithoutSource"
            />
            <span
              class="css-9oxshb-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-cpa8b4-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1lw54ax-MuiTypography-root"
          >
            without Source
          </span>
        </label>
      </div>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Synctest suffix"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="sync-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Suspendtest suffix"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="suspend-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PauseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19h4V5H6zm8-14v14h4V5z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Resumetest suffix"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="resume-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c8"
        >
          <svg
            height="24"
            viewBox="-2 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.08331 18.75V4.75H6.41665V18.75H4.08331ZM8.74998 18.75L20.4166 11.75L8.74998 4.75V18.75Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SyncControls snapshots hideSuspend 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: flex-start;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c4 svg {
  height: 24px;
  width: 24px;
}

.c4 svg path.path-fill,
.c4 svg line.path-fill,
.c4 svg polygon.path-fill,
.c4 svg rect.path-fill,
.c4 svg circle.path-fill,
.c4 svg polyline.path-fill {
  fill: !important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg path.stroke-fill,
.c4 svg line.stroke-fill,
.c4 svg polygon.stroke-fill,
.c4 svg rect.stroke-fill,
.c4 svg circle.stroke-fill,
.c4 svg polyline.stroke-fill {
  stroke: !important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c4.downward {
  transform: rotate(180deg);
}

.c4.upward {
  transform: initial;
}

.c4 img {
  width: 24px;
}

.c5 {
  padding: 4px;
}

.c2.MuiButton-root {
  height: 32px;
  font-size: 12px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c2.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c2.MuiButton-outlined {
  padding: 8px 12px;
}

.c6.MuiFormControlLabel-root {
  margin-right: 0;
  margin-left: 0;
}

.c6 .MuiFormControlLabel-label {
  color: #1a1a1a;
}

.c6 .MuiFormControlLabel-label.Mui-disabled {
  color: #BDBDBD;
}

.c6 .MuiTypography-root {
  margin-left: 8px;
}

.c7.MuiButton-root {
  border-radius: 50%;
  min-width: 32px;
  height: 32px;
  padding: 0;
}

.c7.MuiButton-root.Mui-disabled svg {
  fill: #BDBDBD;
}

.c7.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c7.MuiButton-text {
  padding: 0;
}

.c7.MuiButton-text.Mui-disabled {
  color: #BDBDBD;
}

.c7.MuiButton-text.Mui-disabled svg {
  fill: #BDBDBD;
}

.c1 .sync-icon-button {
  text-transform: uppercase;
  pointer-events: none;
}

.c1 .rotate-icon {
  color: #009CCC;
  animation: 1s linear infinite dxlcOg;
}

<div
    class="c0 c1"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation c2 sync-icon-button css-9buukw-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1v1j2p3-MuiButton-startIcon"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="SyncIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4z"
            />
          </svg>
        </div>
      </span>
      Sync
    </button>
    <div
      class="c5"
    />
    <div
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
    >
      <div
        aria-labelledby="source-radio-buttons-group-label"
        class="MuiFormGroup-root MuiFormGroup-row MuiRadioGroup-root MuiRadioGroup-row css-cis11t-MuiFormGroup-root"
        data-testid="sync-options"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd c6 css-12f4qvw-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-1jxqxch-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              name="source-radio-buttons-group"
              type="radio"
              value="WithSource"
            />
            <span
              class="css-9oxshb-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pqw2bl-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1lw54ax-MuiTypography-root"
          >
            with Source
          </span>
        </label>
        <div
          class="c5"
        />
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd c6 css-12f4qvw-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1jxqxch-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              name="source-radio-buttons-group"
              type="radio"
              value="WithoutSource"
            />
            <span
              class="css-9oxshb-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-cpa8b4-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1lw54ax-MuiTypography-root"
          >
            without Source
          </span>
        </label>
      </div>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Sync"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="sync-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SyncControls snapshots hideSyncOptions 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: flex-start;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c4 svg {
  height: 24px;
  width: 24px;
}

.c4 svg path.path-fill,
.c4 svg line.path-fill,
.c4 svg polygon.path-fill,
.c4 svg rect.path-fill,
.c4 svg circle.path-fill,
.c4 svg polyline.path-fill {
  fill: !important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg path.stroke-fill,
.c4 svg line.stroke-fill,
.c4 svg polygon.stroke-fill,
.c4 svg rect.stroke-fill,
.c4 svg circle.stroke-fill,
.c4 svg polyline.stroke-fill {
  stroke: !important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c4.downward {
  transform: rotate(180deg);
}

.c4.upward {
  transform: initial;
}

.c4 img {
  width: 24px;
}

.c7 svg {
  fill: #009CCC;
  height: 24px;
  width: 24px;
}

.c7 svg path.path-fill,
.c7 svg line.path-fill,
.c7 svg polygon.path-fill,
.c7 svg rect.path-fill,
.c7 svg circle.path-fill,
.c7 svg polyline.path-fill {
  fill: #009CCC!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c7 svg path.stroke-fill,
.c7 svg line.stroke-fill,
.c7 svg polygon.stroke-fill,
.c7 svg rect.stroke-fill,
.c7 svg circle.stroke-fill,
.c7 svg polyline.stroke-fill {
  stroke: #009CCC!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c7 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c7.downward {
  transform: rotate(180deg);
}

.c7.upward {
  transform: initial;
}

.c7 img {
  width: 24px;
}

.c5 {
  padding: 4px;
}

.c2.MuiButton-root {
  height: 32px;
  font-size: 12px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c2.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c2.MuiButton-outlined {
  padding: 8px 12px;
}

.c6.MuiButton-root {
  border-radius: 50%;
  min-width: 32px;
  height: 32px;
  padding: 0;
}

.c6.MuiButton-root.Mui-disabled svg {
  fill: #BDBDBD;
}

.c6.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c6.MuiButton-text {
  padding: 0;
}

.c6.MuiButton-text.Mui-disabled {
  color: #BDBDBD;
}

.c6.MuiButton-text.Mui-disabled svg {
  fill: #BDBDBD;
}

.c1 .sync-icon-button {
  text-transform: uppercase;
  pointer-events: none;
}

.c1 .rotate-icon {
  color: #009CCC;
  animation: 1s linear infinite dxlcOg;
}

<div
    class="c0 c1"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation c2 sync-icon-button css-9buukw-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1v1j2p3-MuiButton-startIcon"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="SyncIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4z"
            />
          </svg>
        </div>
      </span>
      Sync
    </button>
    <div
      class="c5"
    />
    <div
      aria-label="Sync"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c6 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="sync-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Suspend"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c6 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="suspend-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PauseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19h4V5H6zm8-14v14h4V5z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Resume"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c6 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="resume-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c7"
        >
          <svg
            height="24"
            viewBox="-2 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.08331 18.75V4.75H6.41665V18.75H4.08331ZM8.74998 18.75L20.4166 11.75L8.74998 4.75V18.75Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SyncControls snapshots non-suspended 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  justify-content: flex-start;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c4 svg {
  height: 24px;
  width: 24px;
}

.c4 svg path.path-fill,
.c4 svg line.path-fill,
.c4 svg polygon.path-fill,
.c4 svg rect.path-fill,
.c4 svg circle.path-fill,
.c4 svg polyline.path-fill {
  fill: !important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg path.stroke-fill,
.c4 svg line.stroke-fill,
.c4 svg polygon.stroke-fill,
.c4 svg rect.stroke-fill,
.c4 svg circle.stroke-fill,
.c4 svg polyline.stroke-fill {
  stroke: !important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c4 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c4.downward {
  transform: rotate(180deg);
}

.c4.upward {
  transform: initial;
}

.c4 img {
  width: 24px;
}

.c8 svg {
  fill: #009CCC;
  height: 24px;
  width: 24px;
}

.c8 svg path.path-fill,
.c8 svg line.path-fill,
.c8 svg polygon.path-fill,
.c8 svg rect.path-fill,
.c8 svg circle.path-fill,
.c8 svg polyline.path-fill {
  fill: #009CCC!important;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c8 svg path.stroke-fill,
.c8 svg line.stroke-fill,
.c8 svg polygon.stroke-fill,
.c8 svg rect.stroke-fill,
.c8 svg circle.stroke-fill,
.c8 svg polyline.stroke-fill {
  stroke: #009CCC!important;
  transition: stroke 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c8 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c8.downward {
  transform: rotate(180deg);
}

.c8.upward {
  transform: initial;
}

.c8 img {
  width: 24px;
}

.c5 {
  padding: 4px;
}

.c2.MuiButton-root {
  height: 32px;
  font-size: 12px;
  letter-spacing: 1px;
  line-height: 1;
  border-radius: 2px;
  font-weight: 600;
}

.c2.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c2.MuiButton-outlined {
  padding: 8px 12px;
}

.c6.MuiFormControlLabel-root {
  margin-right: 0;
  margin-left: 0;
}

.c6 .MuiFormControlLabel-label {
  color: #1a1a1a;
}

.c6 .MuiFormControlLabel-label.Mui-disabled {
  color: #BDBDBD;
}

.c6 .MuiTypography-root {
  margin-left: 8px;
}

.c7.MuiButton-root {
  border-radius: 50%;
  min-width: 32px;
  height: 32px;
  padding: 0;
}

.c7.MuiButton-root.Mui-disabled svg {
  fill: #BDBDBD;
}

.c7.MuiButton-root:hover {
  background-color: rgba(0, 179, 236, 0.1);
}

.c7.MuiButton-text {
  padding: 0;
}

.c7.MuiButton-text.Mui-disabled {
  color: #BDBDBD;
}

.c7.MuiButton-text.Mui-disabled svg {
  fill: #BDBDBD;
}

.c1 .sync-icon-button {
  text-transform: uppercase;
  pointer-events: none;
}

.c1 .rotate-icon {
  color: #009CCC;
  animation: 1s linear infinite dxlcOg;
}

<div
    class="c0 c1"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation c2 sync-icon-button css-9buukw-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1v1j2p3-MuiButton-startIcon"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="SyncIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8m0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4z"
            />
          </svg>
        </div>
      </span>
      Sync
    </button>
    <div
      class="c5"
    />
    <div
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
    >
      <div
        aria-labelledby="source-radio-buttons-group-label"
        class="MuiFormGroup-root MuiFormGroup-row MuiRadioGroup-root MuiRadioGroup-row css-cis11t-MuiFormGroup-root"
        data-testid="sync-options"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd c6 css-12f4qvw-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-1jxqxch-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              name="source-radio-buttons-group"
              type="radio"
              value="WithSource"
            />
            <span
              class="css-9oxshb-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pqw2bl-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1lw54ax-MuiTypography-root"
          >
            with Source
          </span>
        </label>
        <div
          class="c5"
        />
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd c6 css-12f4qvw-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-1jxqxch-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              name="source-radio-buttons-group"
              type="radio"
              value="WithoutSource"
            />
            <span
              class="css-9oxshb-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-iy8fvg-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-cpa8b4-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1lw54ax-MuiTypography-root"
          >
            without Source
          </span>
        </label>
      </div>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Sync"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="sync-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PlayArrowIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Suspend"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="suspend-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="PauseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 19h4V5H6zm8-14v14h4V5z"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="c5"
    />
    <div
      aria-label="Resume"
      class=""
      data-mui-internal-clone-element="true"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-disableElevation c2 c7 css-624mb0-MuiButtonBase-root-MuiButton-root"
        data-testid="resume-button"
        tabindex="0"
        type="button"
      >
        <div
          class="c3 c8"
        >
          <svg
            height="24"
            viewBox="-2 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.08331 18.75V4.75H6.41665V18.75H4.08331ZM8.74998 18.75L20.4166 11.75L8.74998 4.75V18.75Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
